Remove validation annotation from domain objects. Defensively copy lists